Update openAPI swagger
