# types/dereferecing_metadata.go
@@ -10,7 +10,7 @@ type DidDereferencing struct {
 	Context               string                   `json:"@context,omitempty" example:"https://w3id.org/did-resolution/v1"`
 	DereferencingMetadata DereferencingMetadata    `json:"dereferencingMetadata"`
 	ContentStream         ContentStreamI           `json:"contentStream"`
-	Metadata              ResolutionDidDocMetadata `json:"-"`
+	Metadata              ResolutionDidDocMetadata `json:"contentMetadata"`
 }
 
 func NewDereferencingMetadata(did string, contentType ContentType, resolutionError string) DereferencingMetadata {
@@ -22,6 +22,24 @@ func (d DidDereferencing) GetContentType() string {
 }
 
 func (d DidDereferencing) GetBytes() []byte {
+	if d.ContentStream == nil {
+		return []byte{}
+	}
+	return d.ContentStream.GetBytes()
+}
+
+type ResourceDereferencing struct {
+	Context               string                     `json:"@context,omitempty" example:"https://w3id.org/did-resolution/v1"`
+	DereferencingMetadata DereferencingMetadata      `json:"dereferencingMetadata"`
+	ContentStream         ContentStreamI             `json:"contentStream"`
+	Metadata              ResolutionResourceMetadata `json:"contentMetadata"`
+}
+
+func (d ResourceDereferencing) GetContentType() string {
+	return string(d.DereferencingMetadata.ContentType)
+}
+
+func (d ResourceDereferencing) GetBytes() []byte {
 	if d.ContentStream == nil {
 		return []byte{}
 	}
